should use double quotes or no quotes at all

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,9 +8,9 @@ init:
 
 install:
   - brew cask install r
-  - echo 'options(repos = "https://cran.rstudio.com")' >> '~/.Rprofile'
+  - echo 'options(repos = "https://cran.rstudio.com")' >> ~/.Rprofile
   - mkdir -p ~/R
-  - echo 'R_LIBS_USER="~/R"' >> '~/.Renviron'
+  - echo 'R_LIBS_USER="~/R"' >> ~/.Renviron
 
 build: off
 
