--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,11 +3,8 @@ image: macOS
 cache:
   - $HOME/R
 
-init:
-  - brew install p7zip > /dev/null
-
 install:
-  - brew cask install r
+  - brew cask install r > /dev/null
   - echo 'options(repos = "https://cran.rstudio.com")' >> ~/.Rprofile
   - mkdir -p ~/R
   - echo 'R_LIBS_USER="~/R"' >> ~/.Renviron
