try to put more information in Details because the message has a 500-character limit: https://help.appveyor.com/discussions/problems/28277

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,4 +11,4 @@ build: off
 test_script:
   - Rscript 'compile.R'
   - Rscript 'latex-pass.R'
-  - appveyor AddMessage "$(cat message.txt)"
+  - appveyor AddMessage "$(cat message.txt)" -Details "$(cat details.txt)"
